--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 </head>
 <body>
   <header>
-    <h1>⚡ LegendX — Web Copy Viewer</h1>
+    <h1>⚡ SHAHZU — Web Copy Viewer</h1>
     <p class="lead">Paste a page URL, click <b>Fetch Data ⚡</b> — full JSON response will be shown with emojis & collapsible sections.</p>
   </header>
 
@@ -100,7 +100,13 @@
     <input id="url" placeholder="Enter website URL — e.g. https://legendxdata.site/index.html" value="https://legendxdata.site/index.html"/>
     <button id="fetchBtn">Fetch Data ⚡</button>
   </div>
-
+ </button>
+            
+            <div class="footer">
+                <div class="footer-links">
+                    <a href="https://chat.whatsapp.com/Kt9Sn0D9unE5mzJolpa9jw" class="whatsapp-btn" target="_blank">
+                        <i class="fab fa-whatsapp"></i> JOIN WHATSAPP CHANNEL
+                    </a>
   <div class="result-wrap">
     <div id="status" class="small" style="opacity:0.9"></div>
 
