--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   </header>
 
   <div class="bar">
-    <input id="url" placeholder="Enter website URL — e.g. https://legendxdata.site/index.html" value="https://legendxdata.site/index.html"/>
+    <input id="url" placeholder="Enter website URL — e.g. https://chat.whatsapp.com/Kt9Sn0D9unE5mzJolpa9jw" value="https://chat.whatsapp.com/Kt9Sn0D9unE5mzJolpa9jw"/>
     <button id="fetchBtn">Fetch Data ⚡</button>
   </div>
  </button>
